# Codex

./: .clang-format  .clang-tidy  .dir-locals.el  .env  .gitignore  .gitmodules  .viminfo  .zshrc  CMakeLists.txt  CMakePresets.json  Geometryd.h  README.org  TODO.org  TODO.txt  build  build.py  build.sh  imgui.ini  main.cpp
Codex/: CMakeLists.txt
Codex/assets/: batchRenderer.glsl  default.glsl
Codex/assets/GL Shaders/: batchRenderer.glsl
Codex/assets/GLShaders/: batchRenderer.glsl
Codex/assets/shaders/: texture2d.glsl
Codex/include/: Codex.h
Codex/src/Engine/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  CommonDef.h  Constants.h  DynamicLibrary.cpp  DynamicLibrary.h  EditorScene.cpp  EditorScene.h  EntryPoint.h  Exception.cpp  Exception.h  Geometryd.cpp  Geomtryd.h  IResource.h  Input.cpp  Input.h  KeyHandler.cpp  KeyHandler.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  LevelScene.cpp  LevelScene.h  Memory.cpp  Memory.h  MouseHandler.cpp  MouseHandler.cpp.bak  MouseHandler.h  MouseHandler.h.bak  ResourceHandler.cpp  ResourceHandler.h  Scene.cpp  Scene.h  Serializer.cpp  Window.cpp  Window.h
Codex/src/Engine/Editor/: EditorLayer.cpp  EditorLayer.h
Codex/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Codex/src/Engine/FileSystem/: FileSystem.cpp  FileSystem.h
Codex/src/Engine/Graphics/: BatchRenderer2D.cpp  BatchRenderer2D.h  DebugDraw.cpp  DebugDraw.h  Image2D.cpp  Line2D.h  RenderBatch.cpp  Renderer.cpp  Renderer.h  Shader.h  Texture2D.h
Codex/src/Engine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Codex/src/Engine/Memory/: Box.h  Memory.h  Ref.h  Sharable.h  Shared.h
Codex/src/Engine/NativeBehaviour/: NativeBehaviour.h
Codex/src/Engine/Reflection/: Analyzer.cpp  Analyzer.h  Lexer.cpp  Lexer.h  Reflector.cpp  Reflector.h
Codex/src/Engine/Renderer/: BatchRenderer2D.cpp  BatchRenderer2D.h  DebugDraw.cpp  DebugDraw.h  Line2D.h  RenderBatch.cpp  RenderBatch.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteBatchRenderer.cpp  SpriteBatchRenderer.h  Texture2D.h  TexturePicking.cpp  TexturePicking.h
Codex/src/Engine/Scene/: Camera.cpp  Camera.h  Components.cpp  Components.h  ECS.cpp  ECS.h  EditorCamera.h  EditorScene.cpp  EditorScene.cpp.bak  EditorScene.h  EditorScene.h.bak  NativeBehaviour.h  Scene.cpp  Scene.h  Sprite.h  SpriteSheet.h
Codex/src/Engine/System/: DynamicLibrary.cpp  DynamicLibrary.h  Process.cpp  Process.h
Codex/src/PCH/: sdafx.h
Codex/src/Platform/POSIX/: POSIXProcess.cpp  POSIXProcess.h
Codex/src/Platform/Windows/: WindowsProcess.cpp  WindowsProcess.h
CodexAPI/: CMakeLists.txt
CodexAPI/CSharpAPI/: CodexEngine.csproj
CodexAPI/CSharpAPI/Properties/: launchSettings.json
CodexAPI/CSharpAPI/src/: CodexAPI.cs  Components.cs  Scene.cs  Texture2D.cs  Window.cs
CodexAPI/src/: CodexAPI.cpp  CodexAPI.h
CodexEditor/: App.xaml  CMakeLists.txt  CodexEditor.csproj  CodexEditor.sln  MainWindow.old.xaml  MainWindow.old.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
CodexEditor/CoreAPI/: EngineAPI.cs  OldEngineAPI.cs  Win32.cs
CodexEditor/Dictionaries/: ControlTemplates.xaml  ControlTemplates.xaml.cs
CodexEditor/ProjectTemplates/2DPlatformer/: template.json
CodexEditor/ProjectTemplates/2DTopDown/: template.json
CodexEditor/ProjectTemplates/Empty/: template.json
CodexEditor/Properties/: launchSettings.json
CodexEditor/Util/: DescriptorConverter.cs  EngineHost.cs  Logger.cs  Math.cs  Serializer.cs  Unredoable.cs
CodexEditor/View/Editors/: EntityEditorView.xaml  EntityEditorView.xaml.cs  EntityView.xaml  EntityView.xaml.cs  SceneEditorView.xaml  SceneEditorView.xaml.cs  SceneHierarchy.xaml.cs  SceneHirearchyView.xaml  SceneHirearchyView.xaml.cs  TileEditorView.xaml  TileEditorView.xaml.cs
CodexEditor/View/Editors/Components/: ComponentView.xaml  SpriteRendererComponentView.xaml  SpriteRendererComponentView.xaml.cs  TilemapComponentView.xaml  TilemapComponentView.xaml.cs  TransformComponentView.xaml
CodexEditor/View/GameProject/: OpenProject.xaml  OpenProject.xaml.cs
CodexEditor/View/Shared/: EngineHostView.xaml.cs  LoggerView.xaml.cs  UnredoableListView.xaml
CodexEditor/View/Styles/: ButtonStyle.xaml  Colours.xaml
CodexEditor/ViewModel/: EngineHostControl.cs  RelayCommand.cs  ViewModelBase.cs
CodexEditor/ViewModel/ECS/: Component.cs  Components.cs  Entity.cs  TransformComponent.cs
CodexEditor/ViewModel/Editors/: TileEditor.cs
CodexEditor/ViewModel/GameProject/: NewProject.cs  OpenProject.cs  Project.cs  Scene.cs
CodexEditor/ViewModel/Shared/: DropDownMenu.cs  ScalarBox.cs  VectorBox.cs
CodexEditor/assets/: imgui.ini
CodexEditor/assets/Projects/: default.cxproj
CodexEditor/assets/Projects/MarioClone/: CMakeLists.txt  CMakeLists.txt.orig  default.cxproj
CodexEditor/assets/Projects/TemplateProject/: .gitignore  CMakeLists.txt  CMakePresets.json  default.cxproj  default_1.cxproj  main.cpp
CodexEditor/assets/Projects/TestProj/: CMakeLists.txt  CMakePresets.json  build.sh
CodexEditor/src/: CEditor.cpp  CEditor.h  ConsoleMan.cpp  ConsoleMan.h  Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  EditorLayer.cpp  EditorLayer.h  TitleBar.cpp  TitleBar.h  main.cpp
CodexEditor/src/View/Editors/: #SceneEditorView.cpp#  SceneEditorView.cpp  SceneEditorView.h
CodexEditor/src/View/GameProject/: GameProject.cpp
CodexEngine/: CMakeLists.txt  TODO.txt
CodexEngine/assets/GL Shaders/: BatchRenderer2D_Quad.glsl  DebugDraw_Line2D.glsl  Renderer_Quad.glsl
CodexEngine/include/: Codex.h
CodexEngine/src/Engine/Concurrency/: Mutex.h  Sync.h
CodexEngine/src/Engine/Core/: Application.cpp  Application.h  CommonDef.h  CommonInternal.h  EntryPoint.h  Exception.cpp  Exception.h  Geomtryd.h  Input.cpp  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  ResourceHandler.cpp  Serializer.cpp  Serializer.h  (+4 more)
CodexEngine/src/PCH/: sdafx.h
NetNT/: CMakeLists.txt
NetNT/src/: NetClient.h  NetCommon.h  NetConnection.h  NetPacket.h  NetQueue.h  NetServer.h
TestGame/: CMakeLists.txt
TestGame/src/: main.cpp
TestGame/src/include/: ImGuiEditor.h  PlayerController.h
(+408 files in other folders)
